# risk_id

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  ASYNC-IMPLEMENTATION.md  Dockerfile  LICENSE  README.md  SECURITY-TRIAGE.md  contract-report-1.htm  contract-report-1.html  contract-report-2.htm  contract-report-2.html  contract-report-3.htm  contract-report-3.html  contract-report-4.htm  contract-report-4.html  docker-compose.yaml  gunicorn.conf.py  index.htm  index.html  pyproject.toml  setup.py  test  test-results.md
assets/css/: style.css
assets/js/: main.js
assets/sample-contracts/: contract-1-highlighted-formatted.html  contract-1.html  contract-2-highlighted-formatted.html  contract-2.html
deployment/: README.md  tclp-risk-id.service
docs/plans/: 2026-02-04-env-config-and-gunicorn-deployment.md  frontend-api-compatibility-notes.md
tclp/: .gitignore  __init__.py  app.py  background_tasks.py  complexity.py  detector.py  detector_app.py  detector_index.html  doc_converter.ipynb  highlighted_output.html  index.html  index2-sample.html  minimal_app.py  recommender_app.py  recommender_index.html  task_manager.py  utils.py  xml_parse.py
tclp/CC_BERT/CC_embeddings/: clause_texts.pkl
tclp/LLMs/: chat_fine_tuning.jsonl
tclp/LLMs/notebooks/: adding_noise.ipynb
tclp/clause_detector/: detector_utils.py  index.html
tclp/clause_detector/notebooks/: clause_detector.ipynb  highlighted_output_1.html  highlighted_output_2.html  training_model.ipynb
tclp/clause_detector/py_scripts/: clause_detector.py  insert_clause.py
tclp/clause_recommender/: app.py  categorization.ipynb  clause_matcher.py  clause_matcher_bert.py  clause_risk_cat.ipynb  embedding.ipynb  risk_classification_results.csv  utils.py
tclp/clause_recommender/GUIs/: CCBERT_GUI.py  bowGUI.py  doc2vecGUI.py  legalBERTGUI.py
tclp/clause_recommender/legalbert/legalbert_model/: config.json
tclp/clause_recommender/tcfd/: TCFD_14.csv
tclp/models/: clustering_model.pkl  umap_model.pkl
tclp/models/wandb/run-20250424_134423-jnuzdlzz/: run-jnuzdlzz.wandb
tclp/models/wandb/run-20250424_134459-jwaj5i8r/: run-jwaj5i8r.wandb
tclp/notebooks/: clause_detector.ipynb  clause_recommender.ipynb  clustering_model.pkl  combined_clauses.xlsx  convert_to_txt.ipynb  debug_clause.py  emissions_notebook.ipynb  full_emissions_table_2.csv  highlighted_output.html  model_training_notebook.ipynb  risk_classification_results.csv  risk_notebook.ipynb  stanford_data.ipynb
tclp/notebooks/detector_notebooks/: DAPT.ipynb  training_bert_model.ipynb
tclp/notebooks/detector_notebooks/wandb/: latest-run
tclp/notebooks/recommender_notebooks/: clause_matcher_notebook.ipynb  clause_risk_cat.ipynb  main_recommender_botebook.ipynb
tclp/output/: emission_taxonomy.html  highlighted_output_1756388301.html  highlighted_output_1756388369.html  highlighted_output_1756388413.html  highlighted_output_1756392471.html  highlighted_output_1756399943.html  highlighted_output_1756719500.html  highlighted_output_1756727193.html  highlighted_output_1756731534.html  highlighted_output_1756732630.html  risk_taxonomy.html
tclp/provocotype-1/: README.md  index.htm  index2.htm
tclp/provocotype-1/assets/css/: style.css
tclp/provocotype-1/assets/js/: main.js
tclp/provocotype-1/assets/sample-contracts/: contract-3-highlighted-formatted.html  contract-3.html  contract-4-highlighted-formatted.html  contract-4.html  contract1.htm  (+3 more)
(+32 files in other folders)
