[tool.poetry]
name = "tclp"
version = "1.8.4"
description = "For clause detection and recommendation"
authors = ["Your Name <you@example.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
anyio = "4.6.2.post1"
python-dateutil = "2.9.0.post0"
taskgroup = "0.0.0a4"
accelerate = "1.1.1"
annotated-types = "0.7.0"
appnope = "0.1.4"
asttokens = "2.4.1"
beautifulsoup4 = "4.12.3"
bokeh = "3.6.1"
bs4 = "0.0.2"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
cloudpickle = "3.1.0"
comm = "0.2.2"
contourpy = "1.3.0"
cryptography = "44.0.1"
cycler = "0.12.1"
dask = "2024.10.0"
debugpy = "1.6.7"
decorator = "5.1.1"
distributed = "2024.10.0"
distro = "1.9.0"
exceptiongroup = "1.2.2"
executing = "2.1.0"
fastapi = "0.115.5"
filelock = "3.16.1"
fonttools = "4.60.2"
fsspec = "2024.10.0"
gensim = "4.3.3"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "1.0.7"
httpx = "0.27.2"
huggingface-hub = "0.26.2"
hypercorn = "0.17.3"
hyperframe = "6.0.1"
idna = "3.10"
imbalanced-learn = "0.12.4"
importlib-metadata = "8.5.0"
ipykernel = "6.29.5"
ipython = "8.29.0"
jedi = "0.19.1"
jinja2 = "3.1.6"
jiter = "0.7.1"
joblib = "1.4.2"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kiwisolver = "1.4.7"
livelossplot = "0.5.5"
locket = "1.0.0"
markupsafe = "3.0.2"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
mpmath = "1.3.0"
msgpack = "1.1.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
nltk = "3.9.1"
numpy = "1.26.4"
openai = "1.54.4"
packaging = "24.1"
pandas = "2.2.3"
parso = "0.8.4"
partd = "1.4.2"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pillow = "11.0.0"
pip = "25.3"
platformdirs = "4.3.6"
priority = "2.0.0"
prompt-toolkit = "3.0.48"
psutil = "==5.9.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
pyparsing = "3.2.0"
python-multipart = "0.0.18"
pytz = "2024.2"
pyyaml = "6.0.2"
pyzmq = "25.1.2"
regex = "2024.11.6"
requests = "2.32.4"
safetensors = "0.4.5"
scikit-learn = "1.5.2"
scipy = "1.13.1"
setuptools = "78.1.1"
six = "1.16.0"
smart-open = "7.0.5"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.6"
stack-data = "0.6.2"
starlette = "0.41.3"
sympy = "1.13.1"
tblib = "3.0.0"
threadpoolctl = "3.5.0"
tokenizers = "0.20.3"
tomli = "2.1.0"
toolz = "1.0.0"
torch = "2.1.2"
tqdm = "4.67.0"
traitlets = "5.14.3"
transformers = "4.46.2"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.6.0"
uvicorn = "0.32.0"
wcwidth = "0.2.13"
wheel = "0.44.0"
wrapt = "1.16.0"
wsproto = "1.2.0"
xyzservices = "2024.9.0"
zict = "3.0.0"
zipp = "3.20.2"
termcolor = "^2.5.0"
datasets = "^3.5.0"
wandb = "^0.19.9"
umap-learn = "^0.5.7"
openpyxl = "^3.1.5"
sentence-transformers = "^4.1.0"
seaborn = "^0.13.2"
plotly = "^6.0.1"
lightgbm = "^4.6.0"
xgboost = "^3.0.0"
hdbscan = "^0.8.40"
fuzzywuzzy = "^0.18.0"
rapidfuzz = "^3.13.0"
python-dotenv = "^1.1.0"
bertopic = "^0.17.3"
rich = "^14.1.0"
polars = "^1.33.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.0"
markitdown = "^0.0.1a0"
markdown = "^3.7"
kagglehub = "^0.3.13"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
flake8 = "^7.1.1"
nbqa = "^1.9.1"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
